--- a/언리얼엔진/UE_UFO/Config/DefaultEngine.ini
+++ b/언리얼엔진/UE_UFO/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 EditorStartupMap=/Game/TestLevel.TestLevel
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
