--- a/언리얼엔진/UE_UFO/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/언리얼엔진/UE_UFO/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,17 +173,77 @@ MRUItem0=/Game/TestLevel
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+bShowBoneColors=False
+DefaultBoneColor=(R=0.000000,G=0.000000,B=0.025000,A=1.000000)
+SelectedBoneColor=(R=0.200000,G=1.000000,B=0.200000,A=1.000000)
+AffectedBoneColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+DisabledBoneColor=(R=0.400000,G=0.400000,B=0.400000,A=1.000000)
+ParentOfSelectedBoneColor=(R=0.850000,G=0.450000,B=0.120000,A=1.000000)
+VirtualBoneColor=(R=0.400000,G=0.400000,B=1.000000,A=1.000000)
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bPauseAnimationOnCameraMove=False
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bShowBoneIndexes=False
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+bAllowIncompatibleSkeletonSelection=False
+bUseTreeViewForAnimationCurves=False
+AnimationCurveGroupingDelimiters="._/|\\"
+
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values
+MaterialInstanceConstant=
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Blueprints/Inputs/IA_Move.IA_Move
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Blueprints/Inputs/IA_Move.IA_Move
+
 [EditorStartup]
 LastLevel=/Game/TestLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/BP_Cube.BP_Cube
+OpenAssetsAtExit=/Game/Blueprints/Inputs/IMC_Player.IMC_Player
+OpenAssetsAtExit=/Game/Blueprints/BP_Cube.BP_Cube
+OpenAssetsAtExit=/Game/Blueprints/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Blueprints/Inputs/IA_Move.IA_Move
 
 [DetailCategories]
 DirectionalLight.TransformCommon=True
@@ -494,7 +554,7 @@ AISystem.Blackboard=True
 AISystem.Behavior Tree=True
 AISystem.PerceptionSystem=True
 MegascansMaterialParentSettings.Parent Materials=True
-InterchangeFbxSettings.FBX =True
+InterchangeFbxSettings.FBX=True
 GLTFPipelineSettings.PredefinedglTFMaterialLibrary=True
 InterchangeProjectSettings.ImportContent=True
 InterchangeProjectSettings.ImportIntoLevel=True
@@ -688,6 +748,204 @@ BP_Cube_Child_C.Input=True
 BP_Cube_Child_C.HLOD=True
 BP_Cube_Child_C.Physics=True
 BP_Cube_Child_C.Events=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+BP_Player_C.TransformCommon=True
+BP_Player_C.Animation=True
+BP_Player_C.Mesh=True
+BP_Player_C.Tick=True
+BP_Player_C.ComponentTick=True
+BP_Player_C.Clothing=True
+BP_Player_C.LeaderPoseComponent=True
+BP_Player_C.Physics=True
+BP_Player_C.Collision=True
+BP_Player_C.Lighting=True
+BP_Player_C.AnimationRig=True
+BP_Player_C.Deformer=True
+BP_Player_C.SkinWeights=True
+BP_Player_C.HLOD=True
+BP_Player_C.Rendering=True
+BP_Player_C.Mobile=True
+BP_Player_C.Navigation=True
+BP_Player_C.RayTracing=True
+BP_Player_C.VirtualTexture=True
+BP_Player_C.Tags=True
+BP_Player_C.AssetUserData=True
+BP_Player_C.Replication=True
+BP_Player_C.ComponentReplication=True
+BP_Player_C.Activation=True
+BP_Player_C.Variable=True
+BP_Player_C.Cooking=True
+BP_Player_C.Character Movement (General Settings)=True
+BP_Player_C.Character Movement: Walking=True
+BP_Player_C.Character Movement: Jumping / Falling=True
+BP_Player_C.Character Movement: Gravity=True
+BP_Player_C.Character Movement (Networking)=True
+BP_Player_C.Character Movement: Swimming=True
+BP_Player_C.Character Movement: Flying=True
+BP_Player_C.Character Movement: Custom Movement=True
+BP_Player_C.Character Movement (Rotation Settings)=True
+BP_Player_C.Character Movement: Physics Interaction=True
+BP_Player_C.Character Movement=True
+BP_Player_C.Character Movement: Avoidance=True
+BP_Player_C.RootMotion=True
+BP_Player_C.Character Movement: NavMesh Movement=True
+BP_Player_C.NavMovement=True
+BP_Player_C.Velocity=True
+BP_Player_C.PlanarMovement=True
+BP_Player_C.MovementComponent=True
+BP_Player_C.Shape=True
+BP_Player_C.Character=True
+BP_Player_C.Camera=True
+BP_Player_C.Pawn=True
+BP_Player_C.Actor=True
+BP_Player_C.Input=True
+BP_Player_C.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.LeaderPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.AnimationRig=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Deformer=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+StaticMeshToSkeletalMeshConvertOptions.Location=True
+StaticMeshToSkeletalMeshConvertOptions.Skeleton=True
+StaticMeshToSkeletalMeshConvertOptions.Naming=True
+SkeletalMesh.Material Slots=True
+SkeletalMesh.LODCustomMode=True
+SkeletalMesh.LOD0=True
+SkeletalMesh.LODSettings=True
+SkeletalMesh.Clothing=True
+SkeletalMesh.SkeletalMesh=True
+SkeletalMesh.Mesh=True
+SkeletalMesh.SkinWeights=True
+SkeletalMesh.ImportSettings=True
+SkeletalMesh.AnimationRig=True
+SkeletalMesh.Physics=True
+SkeletalMesh.Lighting=True
+SkeletalMesh.Animation=True
+SkeletalMesh.RayTracing=True
+SkeletalMesh.Sampling=True
+SkeletalMesh.Deformer=True
+SkeletalMesh.Rendering=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.LeaderPoseComponent=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.AnimationRig=True
+SkeletalMeshActor.Deformer=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.HLOD=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Networking=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+SkeletalMeshActor.Materials=True
+BP_Player_C.Networking=True
+BP_Player_C.Materials=True
+BP_GameMode_C.Tick=True
+BP_GameMode_C.Classes=True
+BP_GameMode_C.Game=True
+BP_GameMode_C.GameMode=True
+BP_GameMode_C.Physics=True
+BP_GameMode_C.Events=True
+InterchangeFbxSettings.FBX =True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.ComponentTick=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+InputMappingContext.Mappings=True
+InputMappingContext.Description=True
+InputAction.Description=True
+InputAction.Action=True
+InputAction.Input Consumption=True
+InputAction.User Settings=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -696,7 +954,7 @@ AssetDialog.ZoomScale=0
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 AssetPropertyPicker.ZoomScale=0
-ContentBrowserDrawer.SelectedPaths=/Engine/BasicShapes
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -718,13 +976,20 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
-ContentBrowserDrawer.JumpMRU=/All/EngineData/Engine/BasicShapes
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Inputs
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/Meshes
 ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All
+ContentBrowserDrawer.JumpMRU=/All/EngineData/Engine/BasicShapes
 
 [PlacementMode]
-RecentlyPlaced=/Game/BP_Cube.BP_Cube;
+RecentlyPlaced=/Game/Blueprints/BP_Player.BP_Player;
+RecentlyPlaced=/Game/Meshes/SKM_UFO.SKM_UFO;
+RecentlyPlaced=/Game/Blueprints/BP_Cube.BP_Cube;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/BP_Print.BP_Print;
+RecentlyPlaced=/Game/Blueprints/BP_Print.BP_Print;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -734,17 +999,31 @@ StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.B
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
 Object=
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" "
+DataAsset=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem1=/Game/BP_Cube_Child
-MRUItem2=/Game/BP_Cube
-MRUItem3=/Game/BP_Print
+MRUItem0=/Game/Blueprints/BP_Cube
+MRUItem1=/Game/Blueprints/Inputs/IA_Move
+MRUItem2=/Game/Blueprints/Inputs/IMC_Player
+MRUItem3=/Game/Blueprints/BP_GameMode
+MRUItem4=/Game/Meshes/SKM_UFO
+MRUItem5=/Game/Blueprints/BP_Player
+MRUItem6=/Game/Materials/MI_UFO
+MRUItem7=/Game/Materials/M_UFO
+MRUItem8=/Game/Meshes/SM_UFO
+MRUItem9=/Game/Blueprints/BP_Print
+MRUItem10=/Game/Blueprints/BP_Cube_Child
+MRUItem11=/Engine/BasicShapes/BasicShapeMaterial
 
 [AssetEditorToolkitTabLocation]
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=0
 /Game/BP_Print.BP_Print=0
 /Game/BP_Cube.BP_Cube=0
+/Game/SM_UFO.SM_UFO=1
+/Game/Meshes/SM_UFO.SM_UFO=0
+/Game/Materials/M_UFO.M_UFO=0
+/Game/Blueprints/BP_GameMode.BP_GameMode=0
 
 [MaterialEditor]
 PrimType=1
@@ -933,8 +1212,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2292,4 +2571,41 @@ PerWorldEditorSettings=(("/Game/TestLevel.TestLevel", (LoadedEditorRegions=((Min
 [DetailMultiObjectNodeExpansion]
 GameMapsSettings=True
 GeneralProjectSettings=True
+
+[/Script/SkeletalMeshModelingTools.StaticMeshToSkeletalMeshConvertOptions]
+DestinationPath=(Path="/Game/Meshes")
+SkeletonImportOption=CreateNew
+RootBonePlacement=BottomCenter
+Skeleton=None
+SkeletalMesh=None
+BindingBoneName=(BoneName="")
+PrefixToRemove=SM_
+SkeletalMeshPrefixToAdd=SKM_
+SkeletalMeshSuffixToAdd=
+SkeletonPrefixToAdd=SK_
+SkeletonSuffixToAdd=
+
+[/Script/AudioEditor.AudioEditorSettings]
+bUseAudioAttenuation=True
+bPinSoundCueInAssetMenu=True
+bPinSoundCueTemplateInAssetMenu=False
+bPinSoundAttenuationInAssetMenu=True
+bPinSoundConcurrencyInAssetMenu=True
+
+[SkeletalMeshModelingTools]
+EditingModeActive=True
+
+[DetailCategoriesAdvanced]
+CapsuleComponent.Shape=False
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletalMeshEditor",Commands=)
+
+[MaterialInstanceEditor]
+bDrawGrid=False
+PrimType=1
+
+[MessageLog]
+LastLogListing=AssetCheck
 
